# textprep

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  publish-validation.yml  publish.yml
benches/: textprep_bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: collapse_whitespace.rs  flashtext_find.rs  scrub_policies.rs  similarity.rs  tokenize_with_offsets.rs  unicode_invisibles.rs
src/: flash.rs  fold.rs  lib.rs  ngram.rs  similarity.rs  stopwords.rs  subword.rs  tokenize.rs  unicode.rs
tests/: property_tests.rs
