[package]
name = "textprep"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Arc"]
license = "MIT OR Apache-2.0"
description = "Text preprocessing primitives: normalization, tokenization, and fast keyword matching."
repository = "https://github.com/arclabs561/textprep"
homepage = "https://github.com/arclabs561/textprep"
documentation = "https://docs.rs/textprep"
readme = "README.md"
keywords = ["text-processing", "tokenization", "normalization", "aho-corasick"]
categories = ["text-processing"]

[dependencies]
unicode-normalization = "0.1"
unicode-segmentation = "1.10"
aho-corasick = "1.1"
unicode-casefold = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]
casefold = ["dep:unicode-casefold"]

[dev-dependencies]
proptest = "1.9"
criterion = "0.7"
serde_json = "1.0"

[[bench]]
name = "textprep_bench"
harness = false
